--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- <app-header></app-header>
 <carousel [itemsPerSlide]="itemsPerSlide"
           [singleSlideOffset]="singleSlideOffset"
           [startFromIndex]="6"
@@ -8,5 +9,8 @@
       <h4>Slide {{index}}</h4>
     </div>
   </slide>
-</carousel>
+</carousel> -->
+
+<app-header></app-header>
+<app-popular></app-popular>
 <router-outlet></router-outlet>
