added functions to service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,11 @@
   </slide>
 </carousel> -->
 
+
 <app-header></app-header>
+
 <app-popular></app-popular>
+
+<app-upcoming></app-upcoming>
+
 <router-outlet></router-outlet>
