--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,20 @@
 <nav class="navbar navbar-dark bg-dark">
   <!-- Navbar content -->
+  <app-genres></app-genres>
+
   <div id="search-input">
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      
     </form>
   </div>
-  <app-genres></app-genres>
+  <div id="login">
+    <form class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="login">Login</button>
+    </form>
+  </div>
+ 
   <!-- <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
