--- a/src/app/popular/popular.component.html
+++ b/src/app/popular/popular.component.html
@@ -2,7 +2,7 @@
           [singleSlideOffset]="singleSlideOffset"
           [startFromIndex]="6"
           [interval]=1500>
-          <slide *ngFor="let result of movies; let index=index">
+          <slide *ngFor="let result of movies">
     <img src="https://image.tmdb.org/t/p/w300//{{result.poster_path}}" alt="image slide" style="display: block; width: 100%;">
     <div class="carousel-caption">
      
