--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,9 +1,4 @@
-#search-input{
-    position: sticky;
-    left: 100%;
-}
-#dropdown{
-    position: relative;
-    right: 95%;
-    
+.navigationLinks{
+    display: flex;
+    justify-items: center;
 }
