--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- <carousel [itemsPerSlide]="itemsPerSlide"
+<carousel [itemsPerSlide]="itemsPerSlide"
           [singleSlideOffset]="singleSlideOffset"
           [startFromIndex]="0"
           [interval]=1500>
@@ -7,7 +7,7 @@
     <div class="carousel-caption">
       <h4>Slide {{index}}</h4>
     </div>
-  
   </slide>
 </carousel>
- -->
+
+
