--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     </div>
   </slide>
 </carousel> -->
-
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="mainpage">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</div>
