app is now connected to database. User can successfully register

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,7 @@
   <nav class="navbar navbar-dark bg-dark">
     <!-- navigation content -->
     <!-- Search Button with Input -->
+    <p><a routerLink="home">Home Page</a></p>
     <div id="search-input">
       <form class="form-inline my-2 my-lg-0">
         <input [(ngModel)]="_api.search" name="search" class="form-control mr-sm-2" type="search" placeholder="Search"
