--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,10 @@
       </form>
     </div>
     <!-- <button type="button" class="btn btn-link"><i class="fas fa-user-cog"></i></button> -->
-    <div class="btn-group" dropdown [autoClose]="disabled">
+    <button type="button" class="btn btn-link" id="signin-nav-button"><a routerLink="signin">Sign In</a></button>
+    <button type="button" class="btn btn-link"><a routerLink="register">Sign Up</a></button>
+    
+    <!-- <div class="btn-group" dropdown [autoClose]="disabled">
       <button id="button-autoClose2" dropdownToggle type="button" class="btn btn-primary dropdown-toggle" aria-controls="dropdown-autoClose2" >
         <i class="fas fa-user-cog"></i><span class="caret"></span>
       </button>
@@ -22,22 +25,23 @@
                   <h5 id="login">Login</h5>
                   <p>   </p>
                   <p class="username">username:</p>
-                  <input [(ngModel)]="_api.loginUsernameSignIn" 
+                  <input [(ngModel)]="_api.user.email" 
                   class="Username-input" 
                   type="email"
                   name="emailaddress"
                   size="20" 
                   placeholder="provide username">
-                  <p>{{_api.loginUsernameSignIn}}  </p>
+                  <p>{{_api.user.email}}  </p>
                   <p class="username">password:</p>
                   <p> </p>
-                  <input [(ngModel)]="_api.loginPasswordSignIn"
+                  <input [(ngModel)]="_api.user.password"
                   type="password"
                   name="pwd" 
                   size="20" 
                   placeholder="provide password">
+                  <P>{{_api.user.password}}</P>
                   <p>  </p>
-                  <button>Sign In</button>
+                  <button (click)="_api.onSignIn()"><a routerLink="signin">Sign In</a></button>
                   <p>   </p>
                   <p class="username">Don't Have any Account?</p>
                   <p> </p>
@@ -45,6 +49,6 @@
               </div>
             </ul>
       </div>
-    </div>
+    </div> -->
   </nav>
 </div>
