--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,15 @@
       </form>
     </div>
     <!-- <button type="button" class="btn btn-link"><i class="fas fa-user-cog"></i></button> -->
-    <button type="button" class="btn btn-link" id="signin-nav-button"><a routerLink="signin">Sign In</a></button>
-    <button type="button" class="btn btn-link"><a routerLink="register">Sign Up</a></button>
-    
-    <!-- <div class="btn-group" dropdown [autoClose]="disabled">
+    <div>
+      <button type="button" class="btn btn-link" id="signin-nav-button"><a routerLink="signin">Sign In</a></button>
+      <button type="button" class="btn btn-link" id="signup-nav-button"><a routerLink="register">Sign Up</a></button>
+    </div>
+  </nav>
+</div>
+
+
+<!-- <div class="btn-group" dropdown [autoClose]="disabled">
       <button id="button-autoClose2" dropdownToggle type="button" class="btn btn-primary dropdown-toggle" aria-controls="dropdown-autoClose2" >
         <i class="fas fa-user-cog"></i><span class="caret"></span>
       </button>
@@ -50,5 +55,3 @@
             </ul>
       </div>
     </div> -->
-  </nav>
-</div>
