--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -1,10 +1,16 @@
 #card{
-    width: 15%;
+    width: 25%;
     height: auto;
     position: relative;
-    left: 5%;
+    margin: 5%;
+    // left: 5%;
+    // top: auto;
 }
 .card-image{
-    width: 100%;
+    width: 50%;
     height: auto;
+}
+.image-block{
+    width: 100%;
+    height: 300px;
 }
