--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,5 @@
-<!-- <app-header></app-header>
-<carousel [itemsPerSlide]="itemsPerSlide"
-          [singleSlideOffset]="singleSlideOffset"
-          [startFromIndex]="6"
-          [interval]="false">
-  <slide *ngFor="let slide of slides; let index=index">
-    <img [src]="slide.image" alt="image slide" style="display: block; width: 100%;">
-    <div class="carousel-caption">
-      <h4>Slide {{index}}</h4>
-    </div>
-  </slide>
-</carousel> -->
 <div class="mainpage">
   <app-header></app-header>
+  <!-- <app-allmovies></app-allmovies> -->
   <router-outlet></router-outlet>
 </div>
