--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -1,23 +1,31 @@
-div{
-}
-.card-image{
-    width: 50%;
-    height: auto;
-}
-.image-block{
-    width: 100%;
-    height: 70%;
-}
-mdb-card-img{
-    width: 50%;
-    height: auto;
-}
-mdb-card{
-    margin: 5%;
-    width: 15%;
-    max-height: 10%
-}
-mdb-card-body{
-    width: 100%;
-    height: 300px;
-}
+// mbd-card{
+//     display: flex;
+//     margin: 2%;
+//     max-height: 500px;
+//     max-width: 300px;
+//     margin-bottom: 5%;
+// }
+// mdb-card-img{
+//     width: 100%;
+//     height: auto;
+// }
+// mdb-card-body{
+//     width: 100%;
+//     height: 300px;
+// }
+// .image-control{
+//     display: flex;
+//     width: 120%;
+//     height: auto;
+// }
+// mdb-card-text{
+//     display: flex;
+//     margin: 3%;
+//     overflow: hidden;
+// }
+// .card-content{
+//     max-width: 100%;
+//     max-height: 200px;
+//     margin-bottom: 5%;
+//     overflow: hidden;
+// }
