--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-// .mainpage{
-//     border-color: black;
-//     background-color: #25333D; 
-// }
+.mainpage{
+    margin-left: 3%;
+    margin-right: 3%;
+}
