--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,39 +1,40 @@
 <div class="header-nav">
-        <nav class="navbar navbar-dark bg-dark">
-          <!-- navigation content -->
-          <!-- Search Button with Input -->
-          <p><a routerLink="home">Home Page</a></p>
-          <div id="search-input">
-            <form class="form-inline my-2 my-lg-0">
-              <input [(ngModel)]="_api.search" name="search" class="form-control mr-sm-2" type="search" placeholder="Search"
-                aria-label="Search">
-              <button (click)="_api.onClick()" class="btn btn-outline-success my-2 my-sm-0" type="submit"><a
-                  routerLink="search">Search</a></button>
-            </form>
-          </div>
-          <!-- <button type="button" class="btn btn-link"><i class="fas fa-user-cog"></i></button> -->
-          <div>
-            <div *ngIf="_api.signin == false">
-                <button type="button" class="btn btn-link" id="signin-nav-button"><a routerLink="signin">Sign In</a></button>
-                <button type="button" class="btn btn-link" id="signup-nav-button"><a routerLink="register">Sign Up</a></button>
+  <nav class="navbar navbar-dark bg-dark">
+    <!-- navigation content -->
+    <!-- Search Button with Input -->
+    <p><a routerLink="home">Home Page</a></p>
+    <div id="search-input">
+      <!-- Search form -->
+      <!-- <form class="form-inline md-form form-sm">
+          <div class="md-form">
+              <input [(ngModel)] = "search" id="input_text" class="form-control" type="text" length="10" mdbCharCounter mdbInput>
+              <label for="input_text">Input text</label>
             </div>
-            <div id="signedIn-email" *ngIf="_api.signin == true">
-                <div class="btn-group" dropdown>
-                    <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
-                            aria-controls="dropdown-basic">
-                      {{_api.user.email}} <span class="caret"></span>
-                    </button>
-                    <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
-                        role="menu" aria-labelledby="button-basic">
-                      <li role="menuitem"><a class="dropdown-item" routerLink = "fav-movies">Favorite Movies</a></li>
-                      <li role="menuitem"><a class="dropdown-item" routerLink = "movie-card">Temporary Link</a></li>
-                      <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
-                      <li class="divider dropdown-divider"></li>
-                      <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>
-                      </li>
-                    </ul>
-                  </div>
-            </div>
-          </div>
-        </nav>
+        <mdb-icon fas icon="search" aria-hidden="true"></mdb-icon>
+      </form>
+    </div> -->
+    <!-- <button type="button" class="btn btn-link"><i class="fas fa-user-cog"></i></button> -->
+    <div>
+      <div *ngIf="_api.signin == false">
+        <button type="button" class="btn btn-link" id="signin-nav-button"><a routerLink="signin">Sign In</a></button>
+        <button type="button" class="btn btn-link" id="signup-nav-button"><a routerLink="register">Sign Up</a></button>
       </div>
+      <div id="signedIn-email" *ngIf="_api.errors != null">
+        <div class="btn-group" dropdown>
+          <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+            aria-controls="dropdown-basic">
+            {{_api.user.email}} <span class="caret"></span>
+          </button>
+          <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
+            <li role="menuitem"><a class="dropdown-item" routerLink="fav-movies">Favorite Movies</a></li>
+            <li role="menuitem"><a class="dropdown-item" routerLink="movie-card">Temporary Link</a></li>
+            <li role="menuitem"><a class="dropdown-item" href="#">Something else here</a></li>
+            <li class="divider dropdown-divider"></li>
+            <li role="menuitem"><a class="dropdown-item" href="#">Separated link</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  <!-- </nav> -->
+</div>
