--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -5,27 +5,38 @@
 //     max-width: 300px;
 //     margin-bottom: 5%;
 // }
-// mdb-card-img{
-//     width: 100%;
-//     height: auto;
-// }
+mdb-card{
+    max-width: 100%;
+    height: 100%;
+}
 // mdb-card-body{
 //     width: 100%;
 //     height: 300px;
 // }
-// .image-control{
-//     display: flex;
-//     width: 120%;
-//     height: auto;
-// }
-// mdb-card-text{
-//     display: flex;
-//     margin: 3%;
-//     overflow: hidden;
-// }
+mdb-card-img{
+    display: flex;
+    max-width: auto;
+    height: 400px;
+}
+
+.image-control{
+    display: inline;
+    //width: inherit;
+    max-height: 450px;
+}
+mdb-card-text{
+    display: flex;
+    margin: 3%;
+    overflow: hidden;
+}
 // .card-content{
 //     max-width: 100%;
 //     max-height: 200px;
 //     margin-bottom: 5%;
 //     overflow: hidden;
 // }
+.card-body{
+    display: flex;
+    max-width: 100%;
+    max-height: 15%;
+}
