--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -41,10 +41,10 @@
       </div>
     </div>
     <!-- Sign in button -->
-    <button (click)="_api.onSignIn()" mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
+    <button (click)="_api.userCheckgetIdToken()" mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
     <!-- Register -->
     <p>Not a member?
-      <a href="">Register</a>
+      <a routerLink="register">Register</a>
     </p>
   
     <!-- Social login -->
