--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -27,6 +27,7 @@ mdb-card-img{
 mdb-card-text{
     display: flex;
     margin: 3%;
+    flex-direction: column;
     overflow: hidden;
 }
 // .card-content{
