--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,12 +1,7 @@
 <div>
   <div class="searchresults">
-    <div *ngFor="let result of _api.movies" class="card" style="width: 18rem;">
-      <img src="https://image.tmdb.org/t/p/w300/{{result.poster_path}}" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="text-primary">{{result.original_title}}</h5>
-        <p class="card-text="></p>
-        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-      </div>
+    <div *ngFor="let movie of _api.searchresult" class="card" style="width: 18rem;">
+      <app-movie-card [movie]="movie"></app-movie-card>
     </div>
   </div>
 </div>
