working on details 2

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -7,8 +7,11 @@
                 <div id="imageBoxDetails" >
                     <img id = imageDetails src="https://image.tmdb.org/t/p/w500/{{_api.movie.poster_path}}">
                 </div>
+                
                 <div id="overviewDetails">
-                        <p>Overview: <br>{{_api.movie.overview}}</p>
+                        
+                        <p><i id="icons" class="far fa-bookmark"></i><br>
+                            <br><p>Overview: <br>{{_api.movie.overview}}</p>
                         <!-- <button (click)="_api.postFavourites()">Post to favourites</button>
                         <button (click)="_api.showFavourites()">Show Saved Favourites</button> -->
                         <div *ngFor="let item of _api.favourites">
