--- a/src/app/details/details.component.scss
+++ b/src/app/details/details.component.scss
@@ -6,14 +6,16 @@ div {
     margin: 3%;
     max-width: 100%;
     max-height: auto;
+    display: flex;
 }
 #overviewDetails{
-    flex-grow: 1;
+    flex-grow: 2;
     display: flex;
     max-width: 50%;
     max-height: 20%;
-    position: relative;
     top: 15%;
+    
+    justify-content: row;
   
 }
 #imageBoxDetails{
@@ -34,4 +36,10 @@ div {
 
     min-height: 5%;
     min-width:100%;
+}
+
+#icons{
+    // flex-grow: 1;
+  position: absolute;
+  left: 80%; 
 }
